Fixed linter errors

--- a/src/pages/teamDetail/teamDetail.html
+++ b/src/pages/teamDetail/teamDetail.html
@@ -28,4 +28,13 @@
     </ion-segment>
   </div>
 
+  <ag-grid-angular
+    #agGrid
+    style="width: 500px; height: 500px;"
+    class="ag-theme-balham"
+    [gridOptions]="gridOptions"
+    [rowData]="rowData"
+    [columnDefs]="columnDefs">
+  </ag-grid-angular>
+
 </ion-content>
