--- a/src/pages/players/players.html
+++ b/src/pages/players/players.html
@@ -8,10 +8,12 @@
 </ion-header>
 
 <ion-content>
-
   <div>
     <player-list [playerList]="playerList" [grouped]="true" [searchable]="true">
     </player-list>
+  </div>
+  <div class="spinnerContainer" *ngIf="!isReady">
+    <ion-spinner name="bubbles"></ion-spinner>
   </div>
 
 </ion-content>
